[tool.poetry]
name = "vuanem-arcgis"
version = "0.1.0"
description = ""
authors = ["HM <hieumdd@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
notebook = "^6.5.4"
pandas = "^2.0.2"
openpyxl = "^3.1.2"
arcgis = "^2.1.0.3"
urllib3 = "1.26.5"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-p no:warnings -s --durations=0"
python_files = "*_test.py"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
namespace_packages = true
